Fix item-list issue and add purchases files
